--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: devise_test_development
+  database: devise_twitter_ex_development
   pool: 5
   username: dylanoshea
